# felicizia

./: CMakeLists.txt  makefsdata  sdkconfig
HTML/: index.html
main/: CMakeLists.txt  MainApp.cpp  MainApp.h  ThingSpeak.cpp  ThingSpeak.h  Websocket.cpp  Websocket.h  components  fs.c  fsdata.c  idf_component.yml  main.c  startup.cpp
main/components/: DataManager.cpp  DataManager.h  ObjManager.cpp  ObjManager.h  Persistance.cpp  Persistance.h  Property.h  Protocol.cpp  Protocol.h  Types.cpp  Types.h  personal.code-workspace
main/components/objects/: AnalogInput.cpp  AnalogInput.h  AnalogInputCal.cpp  AnalogInputCal.h  Base.cpp  Base.h  Device.cpp  Device.h  DigitalOutput.cpp  DigitalOutput.h  Threshold.cpp  Threshold.h
main/esp32/: ADS115.h  Adc.cpp  Adc.h  Hal.cpp  Hal.h  Http.cpp  Http.h  Lock.cpp  Lock.h  Nvs.cpp  Nvs.h  OneWire.cpp  OneWire.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  UsRange.cpp  UsRange.h  WifiManager.cpp  WifiManager.h
main/linux/: Adc.cpp  Adc.h  CMakeLists.txt  Http.cpp  Http.h  Lock.cpp  Lock.h  Nvs.cpp  Nvs.h  OneWire.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  WifiManager.cpp  WifiManager.h  esp_log.cpp  esp_log.h  lv_conf.h  main.c
